trying to write an item to memory that java cannot access. what

--- a/src/main/resources/assets/moonbits/lang/en_us.json
+++ b/src/main/resources/assets/moonbits/lang/en_us.json
@@ -475,7 +475,7 @@
     "block.moonbits.banded_iron": "Banded Iron Formation",
     "block.moonbits.magnetite_ore": "Magnetite Ore",
 	
-    "block.moonbits.magnetite_block": "Magnetite Block",
+    "block.moonbits.magnetite_block": "Block of Magnetite",
     "block.moonbits.magnet": "Magnet",
     "block.moonbits.repulsor": "Repulsor",
     "block.moonbits.redstone_sustainer": "Redstone Sustainer",
