--- a/src/main/resources/assets/moonbits/lang/en_us.json
+++ b/src/main/resources/assets/moonbits/lang/en_us.json
@@ -425,9 +425,11 @@
     "block.moonbits.parasol_fern_stem": "Parasol Fern Stem",
     "block.moonbits.parasol_fern_crown": "Parasol Fern Crown",
     "block.moonbits.parasol_leaf": "Parasol Fern Leaf",
-    "block.moonbits.parasol_fern_fiber": "Parasol Fern Fiber",
-    "block.moonbits.parasol_fern_fiber_slab": "Parasol Fern Fiber Slab",
-    "block.moonbits.parasol_fern_fiber_stairs": "Parasol Fern Fiber Stairs",
+    "block.moonbits.parasol_fern_fiber": "Parasol Fiber Block",
+    "block.moonbits.parasol_fern_fiber_slab": "Parasol Fiber Slab",
+    "block.moonbits.parasol_fern_fiber_stairs": "Parasol Fiber Stairs",
+    "block.moonbits.parasol_pup": "Parasol Pup",
+    "item.moonbits.parasol_fiber": "Parasol Fiber",
 	
     "block.moonbits.hardy_leaves": "Hardy Leaves",
     "block.moonbits.flowering_hardy_leaves": "Flowering Hardy Leaves",
