--- a/src/main/resources/assets/moonbits/lang/en_us.json
+++ b/src/main/resources/assets/moonbits/lang/en_us.json
@@ -122,13 +122,63 @@
 	"block.moonbits.deepslate_tin_ore": "Deepslate Tin Ore",
 	"block.moonbits.chert_tin_ore": "Chert Tin Ore",
 	"block.moonbits.raw_tin_block": "Block of Raw Tin",
+	
 	"block.moonbits.tin_block": "Block of Tin",
+	"block.moonbits.oxidized_tin_block": "Oxidized Tin",
+	"block.moonbits.blackened_tin_block": "Blackened Tin",
+	"block.moonbits.pestered_tin_block": "Pestered Tin",
+	"block.moonbits.waxed_tin_block": "Waxed Block of Tin",
+	"block.moonbits.waxed_oxidized_tin_block": "Waxed Oxidized Tin",
+	"block.moonbits.waxed_blackened_tin_block": "Waxed Blackened Tin",
+	"block.moonbits.waxed_pestered_tin_block": "Waxed Pestered Tin",
+	
 	"block.moonbits.cut_tin": "Cut Tin",
+	"block.moonbits.oxidized_cut_tin": "Oxidized Cut Tin",
+	"block.moonbits.blackened_cut_tin": "Blackened Cut Tin",
+	"block.moonbits.pestered_cut_tin": "Pestered Cut Tin",
+	"block.moonbits.waxed_cut_tin": "Waxed Cut Tin",
+	"block.moonbits.waxed_oxidized_cut_tin": "Waxed Oxidized Cut Tin",
+	"block.moonbits.waxed_blackened_cut_tin": "Waxed Blackened Cut Tin",
+	"block.moonbits.waxed_pestered_cut_tin": "Waxed Pestered Cut Tin",
+	
 	"block.moonbits.cut_tin_stairs": "Cut Tin Stairs",
+	"block.moonbits.oxidized_cut_tin_stairs": "Oxidized Cut Tin Stairs",
+	"block.moonbits.blackened_cut_tin_stairs": "Blackened Cut Tin Stairs",
+	"block.moonbits.pestered_cut_tin_stairs": "Pestered Cut Tin Stairs",
+	"block.moonbits.waxed_cut_tin_stairs": "Waxed Cut Tin Stairs",
+	"block.moonbits.waxed_oxidized_cut_tin_stairs": "Waxed Oxidized Cut Tin Stairs",
+	"block.moonbits.waxed_blackened_cut_tin_stairs": "Waxed Blackened Cut Tin Stairs",
+	"block.moonbits.waxed_pestered_cut_tin_stairs": "Waxed Pestered Cut Tin Stairs",
+	
 	"block.moonbits.cut_tin_slab": "Cut Tin Slab",
-	"block.moonbits.tin_pillar": "Tin Pillar",
+	"block.moonbits.oxidized_cut_tin_slab": "Oxidized Cut Tin Slab",
+	"block.moonbits.blackened_cut_tin_slab": "Blackened Cut Tin Slab",
+	"block.moonbits.pestered_cut_tin_slab": "Pestered Cut Tin Slab",
+	"block.moonbits.waxed_cut_tin_slab": "Waxed Cut Tin Slab",
+	"block.moonbits.waxed_oxidized_cut_tin_slab": "Waxed Oxidized Cut Tin Slab",
+	"block.moonbits.waxed_blackened_cut_tin_slab": "Waxed Blackened Cut Tin Slab",
+	"block.moonbits.waxed_pestered_cut_tin_slab": "Waxed Pestered Cut Tin Slab",
+	
 	"block.moonbits.tin_door": "Tin Door",
+	"block.moonbits.oxidized_tin_door": "Oxidized Tin Door",
+	"block.moonbits.blackened_tin_door": "Blackened Tin Door",
+	"block.moonbits.pestered_tin_door": "Pestered Tin Door",
+	"block.moonbits.waxed_tin_door": "Waxed Tin Door",
+	"block.moonbits.waxed_oxidized_tin_door": "Waxed Oxidized Tin Door",
+	"block.moonbits.waxed_blackened_tin_door": "Waxed Blackened Tin Door",
+	"block.moonbits.waxed_pestered_tin_door": "Waxed Pestered Tin Door",
+	
 	"block.moonbits.tin_trapdoor": "Tin Trapdoor",
+	"block.moonbits.oxidized_tin_trapdoor": "Oxidized Tin Trapdoor",
+	"block.moonbits.blackened_tin_trapdoor": "Blackened Tin Trapdoor",
+	"block.moonbits.pestered_tin_trapdoor": "Pestered Tin Trapdoor",
+	"block.moonbits.waxed_tin_trapdoor": "Waxed Tin Trapdoor",
+	"block.moonbits.waxed_oxidized_tin_trapdoor": "Waxed Oxidized Tin Trapdoor",
+	"block.moonbits.waxed_blackened_tin_trapdoor": "Waxed Blackened Tin Trapdoor",
+	"block.moonbits.waxed_pestered_tin_trapdoor": "Waxed Pestered Tin Trapdoor",
+	
+	"block.moonbits.tin_pillar": "Tin Pillar",
+	
 	"block.moonbits.chute": "Chute",
 	"block.moonbits.tin_chest": "Tin Chest",
 	
@@ -205,8 +255,8 @@
 	"block.moonbits.acacia_planter_box": "Acacia Planter Box", 
 	"block.moonbits.dark_oak_planter_box": "Dark Oak Planter Box", 
 	"block.moonbits.mangrove_planter_box": "Mangrove Planter Box", 
-	"block.moonbits.crimson_planter_box": "Crimson Planter Box", 
-	"block.moonbits.warped_planter_box": "Warped Planter Box", 
+	"block.moonbits.crimson_planter_box": "Crimson Nether Planter", 
+	"block.moonbits.warped_planter_box": "Warped Nether Planter", 
  
  "_comment": "birch forest",
 	
@@ -439,6 +489,8 @@
     "item.moonbits.hardy_berry": "Hardy Berry",
     "item.moonbits.hardy_berry_seed": "Hardy Berry Seed",
     "item.moonbits.hardy_stem": "Hardy Stem",
+	
+    "block.moonbits.hardy_stem": "Desert Planter",
 	
 	"block.moonbits.cedar_planks": "Cedar Planks",
     "block.moonbits.cedar_sapling": "Cedar Sapling",
