final commit for this version
archived now. mod will be rewritten

--- a/src/main/resources/assets/moonbits/lang/en_us.json
+++ b/src/main/resources/assets/moonbits/lang/en_us.json
@@ -712,96 +712,96 @@
 	"block.moonbits.fuzz_roots": "Fuzz Roots",
 	
 	
-	"block.moonbits.fuzz_block": "Fuzz Block",
-	"block.moonbits.fuzz_block_stairs": "Fuzz Stairs",
-	"block.moonbits.fuzz_block_slab": "Fuzz Slab",
+	"block.moonbits.fuzz_block": "Mycotta",
+	"block.moonbits.fuzz_block_stairs": "Mycotta Stairs",
+	"block.moonbits.fuzz_block_slab": "Mycotta Slab",
 	
-	"block.moonbits.fuzz_boards": "Fuzz Boards",
-	"block.moonbits.fuzz_board_stairs": "Fuzz Board Stairs",
-	"block.moonbits.fuzz_board_slab": "Fuzz Board Slab",
+	"block.moonbits.fuzz_boards": "Mycotta Boards",
+	"block.moonbits.fuzz_board_stairs": "Mycotta Board Stairs",
+	"block.moonbits.fuzz_board_slab": "Mycotta Board Slab",
 	
-	"block.moonbits.fuzz_bricks": "Fuzz Bricks",
-	"block.moonbits.fuzz_brick_stairs": "Fuzz Brick Stairs",
-	"block.moonbits.fuzz_brick_slab": "Fuzz Brick Slab",
-	"block.moonbits.fuzz_brick_wall": "Fuzz Brick Wall",
+	"block.moonbits.fuzz_bricks": "Mycotta Bricks",
+	"block.moonbits.fuzz_brick_stairs": "Mycotta Brick Stairs",
+	"block.moonbits.fuzz_brick_slab": "Mycotta Brick Slab",
+	"block.moonbits.fuzz_brick_wall": "Mycotta Brick Wall",
 	
-	"block.moonbits.red_fuzz_block": "Red Fuzz Block",
-	"block.moonbits.red_fuzz_block_stairs": "Red Fuzz Stairs",
-	"block.moonbits.red_fuzz_block_slab": "Red Fuzz Slab",
+	"block.moonbits.red_fuzz_block": "Red Mycotta",
+	"block.moonbits.red_fuzz_block_stairs": "Red Mycotta Stairs",
+	"block.moonbits.red_fuzz_block_slab": "Red Mycotta Slab",
 	
-	"block.moonbits.red_fuzz_boards": "Red Fuzz Boards",
-	"block.moonbits.red_fuzz_board_stairs": "Red Fuzz Board Stairs",
-	"block.moonbits.red_fuzz_board_slab": "Red Fuzz Board Slab",
+	"block.moonbits.red_fuzz_boards": "Red Mycotta Boards",
+	"block.moonbits.red_fuzz_board_stairs": "Red Mycotta Board Stairs",
+	"block.moonbits.red_fuzz_board_slab": "Red Mycotta Board Slab",
 	
-	"block.moonbits.red_fuzz_bricks": "Red Fuzz Bricks",
-	"block.moonbits.red_fuzz_brick_stairs": "Red Fuzz Brick Stairs",
-	"block.moonbits.red_fuzz_brick_slab": "Red Fuzz Brick Slab",
-	"block.moonbits.red_fuzz_brick_wall": "Red Fuzz Brick Wall",
+	"block.moonbits.red_fuzz_bricks": "Red Mycotta Bricks",
+	"block.moonbits.red_fuzz_brick_stairs": "Red Mycotta Brick Stairs",
+	"block.moonbits.red_fuzz_brick_slab": "Red Mycotta Brick Slab",
+	"block.moonbits.red_fuzz_brick_wall": "Red Mycotta Brick Wall",
 	
-	"block.moonbits.brown_fuzz_block": "Brown Fuzz Block",
-	"block.moonbits.brown_fuzz_block_stairs": "Brown Fuzz Stairs",
-	"block.moonbits.brown_fuzz_block_slab": "Brown Fuzz Slab",
+	"block.moonbits.brown_fuzz_block": "Brown Mycotta",
+	"block.moonbits.brown_fuzz_block_stairs": "Brown Mycotta Stairs",
+	"block.moonbits.brown_fuzz_block_slab": "Brown Mycotta Slab",
 	
-	"block.moonbits.brown_fuzz_boards": "Brown Fuzz Boards",
-	"block.moonbits.brown_fuzz_board_stairs": "Brown Fuzz Board Stairs",
-	"block.moonbits.brown_fuzz_board_slab": "Brown Fuzz Board Slab",
+	"block.moonbits.brown_fuzz_boards": "Brown Mycotta Boards",
+	"block.moonbits.brown_fuzz_board_stairs": "Brown Mycotta Board Stairs",
+	"block.moonbits.brown_fuzz_board_slab": "Brown Mycotta Board Slab",
 	
-	"block.moonbits.brown_fuzz_bricks": "Brown Fuzz Bricks",
-	"block.moonbits.brown_fuzz_brick_stairs": "Brown Fuzz Brick Stairs",
-	"block.moonbits.brown_fuzz_brick_slab": "Brown Fuzz Brick Slab",
-	"block.moonbits.brown_fuzz_brick_wall": "Brown Fuzz Brick Wall",
+	"block.moonbits.brown_fuzz_bricks": "Brown Mycotta Bricks",
+	"block.moonbits.brown_fuzz_brick_stairs": "Brown Mycotta Brick Stairs",
+	"block.moonbits.brown_fuzz_brick_slab": "Brown Mycotta Brick Slab",
+	"block.moonbits.brown_fuzz_brick_wall": "Brown Mycotta Brick Wall",
 	
-	"block.moonbits.saffron_fuzz_block": "Saffron Fuzz Block",
-	"block.moonbits.saffron_fuzz_block_stairs": "Saffron Fuzz Stairs",
-	"block.moonbits.saffron_fuzz_block_slab": "Saffron Fuzz Slab",
+	"block.moonbits.saffron_fuzz_block": "Saffron Mycotta",
+	"block.moonbits.saffron_fuzz_block_stairs": "Saffron Mycotta Stairs",
+	"block.moonbits.saffron_fuzz_block_slab": "Saffron Mycotta Slab",
 	
-	"block.moonbits.saffron_fuzz_boards": "Saffron Fuzz Boards",
-	"block.moonbits.saffron_fuzz_board_stairs": "Saffron Fuzz Board Stairs",
-	"block.moonbits.saffron_fuzz_board_slab": "Saffron Fuzz Board Slab",
+	"block.moonbits.saffron_fuzz_boards": "Saffron Mycotta Boards",
+	"block.moonbits.saffron_fuzz_board_stairs": "Saffron Mycotta Board Stairs",
+	"block.moonbits.saffron_fuzz_board_slab": "Saffron Mycotta Board Slab",
 	
-	"block.moonbits.saffron_fuzz_bricks": "Saffron Fuzz Bricks",
-	"block.moonbits.saffron_fuzz_brick_stairs": "Saffron Fuzz Brick Stairs",
-	"block.moonbits.saffron_fuzz_brick_slab": "Saffron Fuzz Brick Slab",
-	"block.moonbits.saffron_fuzz_brick_wall": "Saffron Fuzz Brick Wall",
+	"block.moonbits.saffron_fuzz_bricks": "Saffron Mycotta Bricks",
+	"block.moonbits.saffron_fuzz_brick_stairs": "Saffron Mycotta Brick Stairs",
+	"block.moonbits.saffron_fuzz_brick_slab": "Saffron Mycotta Brick Slab",
+	"block.moonbits.saffron_fuzz_brick_wall": "Saffron Mycotta Brick Wall",
 	
-	"block.moonbits.bonnet_fuzz_block": "Bonnet Fuzz Block",
-	"block.moonbits.bonnet_fuzz_block_stairs": "Bonnet Fuzz Stairs",
-	"block.moonbits.bonnet_fuzz_block_slab": "Bonnet Fuzz Slab",
+	"block.moonbits.bonnet_fuzz_block": "Bonnet Mycotta",
+	"block.moonbits.bonnet_fuzz_block_stairs": "Bonnet Mycotta Stairs",
+	"block.moonbits.bonnet_fuzz_block_slab": "Bonnet Mycotta Slab",
 	
-	"block.moonbits.bonnet_fuzz_boards": "Bonnet Fuzz Boards",
-	"block.moonbits.bonnet_fuzz_board_stairs": "Bonnet Fuzz Board Stairs",
-	"block.moonbits.bonnet_fuzz_board_slab": "Bonnet Fuzz Board Slab",
+	"block.moonbits.bonnet_fuzz_boards": "Bonnet Mycotta Boards",
+	"block.moonbits.bonnet_fuzz_board_stairs": "Bonnet Mycotta Board Stairs",
+	"block.moonbits.bonnet_fuzz_board_slab": "Bonnet Mycotta Board Slab",
 	
-	"block.moonbits.bonnet_fuzz_bricks": "Bonnet Fuzz Bricks",
-	"block.moonbits.bonnet_fuzz_brick_stairs": "Bonnet Fuzz Brick Stairs",
-	"block.moonbits.bonnet_fuzz_brick_slab": "Bonnet Fuzz Brick Slab",
-	"block.moonbits.bonnet_fuzz_brick_wall": "Bonnet Fuzz Brick Wall",
+	"block.moonbits.bonnet_fuzz_bricks": "Bonnet Mycotta Bricks",
+	"block.moonbits.bonnet_fuzz_brick_stairs": "Bonnet Mycotta Brick Stairs",
+	"block.moonbits.bonnet_fuzz_brick_slab": "Bonnet Mycotta Brick Slab",
+	"block.moonbits.bonnet_fuzz_brick_wall": "Bonnet Mycotta Brick Wall",
 	
-	"block.moonbits.amity_fuzz_block": "Amity Fuzz Block",
-	"block.moonbits.amity_fuzz_block_stairs": "Amity Fuzz Stairs",
-	"block.moonbits.amity_fuzz_block_slab": "Amity Fuzz Slab",
+	"block.moonbits.amity_fuzz_block": "Amity Mycotta",
+	"block.moonbits.amity_fuzz_block_stairs": "Amity Mycotta Stairs",
+	"block.moonbits.amity_fuzz_block_slab": "Amity Mycotta Slab",
 	
-	"block.moonbits.amity_fuzz_boards": "Amity Fuzz Boards",
-	"block.moonbits.amity_fuzz_board_stairs": "Amity Fuzz Board Stairs",
-	"block.moonbits.amity_fuzz_board_slab": "Amity Fuzz Board Slab",
+	"block.moonbits.amity_fuzz_boards": "Amity Mycotta Boards",
+	"block.moonbits.amity_fuzz_board_stairs": "Amity Mycotta Board Stairs",
+	"block.moonbits.amity_fuzz_board_slab": "Amity Mycotta Board Slab",
 	
-	"block.moonbits.amity_fuzz_bricks": "Amity Fuzz Bricks",
-	"block.moonbits.amity_fuzz_brick_stairs": "Amity Fuzz Brick Stairs",
-	"block.moonbits.amity_fuzz_brick_slab": "Amity Fuzz Brick Slab",
-	"block.moonbits.amity_fuzz_brick_wall": "Amity Fuzz Brick Wall",
+	"block.moonbits.amity_fuzz_bricks": "Amity Mycotta Bricks",
+	"block.moonbits.amity_fuzz_brick_stairs": "Amity Mycotta Brick Stairs",
+	"block.moonbits.amity_fuzz_brick_slab": "Amity Mycotta Brick Slab",
+	"block.moonbits.amity_fuzz_brick_wall": "Amity Mycotta Brick Wall",
 	
-	"block.moonbits.inky_fuzz_block": "Inky Fuzz Block",
-	"block.moonbits.inky_fuzz_block_stairs": "Inky Fuzz Stairs",
-	"block.moonbits.inky_fuzz_block_slab": "Inky Fuzz Slab",
+	"block.moonbits.inky_fuzz_block": "Inky Mycotta",
+	"block.moonbits.inky_fuzz_block_stairs": "Inky Mycotta Stairs",
+	"block.moonbits.inky_fuzz_block_slab": "Inky Mycotta Slab",
 	
-	"block.moonbits.inky_fuzz_boards": "Inky Fuzz Boards",
-	"block.moonbits.inky_fuzz_board_stairs": "Inky Fuzz Board Stairs",
-	"block.moonbits.inky_fuzz_board_slab": "Inky Fuzz Board Slab",
+	"block.moonbits.inky_fuzz_boards": "Inky Mycotta Boards",
+	"block.moonbits.inky_fuzz_board_stairs": "Inky Mycotta Board Stairs",
+	"block.moonbits.inky_fuzz_board_slab": "Inky Mycotta Board Slab",
 	
-	"block.moonbits.inky_fuzz_bricks": "Inky Fuzz Bricks",
-	"block.moonbits.inky_fuzz_brick_stairs": "Inky Fuzz Brick Stairs",
-	"block.moonbits.inky_fuzz_brick_slab": "Inky Fuzz Brick Slab",
-	"block.moonbits.inky_fuzz_brick_wall": "Inky Fuzz Brick Wall",
+	"block.moonbits.inky_fuzz_bricks": "Inky Mycotta Bricks",
+	"block.moonbits.inky_fuzz_brick_stairs": "Inky Mycotta Brick Stairs",
+	"block.moonbits.inky_fuzz_brick_slab": "Inky Mycotta Brick Slab",
+	"block.moonbits.inky_fuzz_brick_wall": "Inky Mycotta Brick Wall",
 	
 	
 	"block.moonbits.flint_block": "Block of Flint",
